@@ -1,3 +1,8 @@
+2009-11-19  Jaroslav Hajek  <highegg@gmail.com>
+
+	* pytave.cc (func_eval): Catch & rethrow std::bad_alloc.
+	(str_eval): Likewise.
+
 2009-09-27  David Grundberg  <individ@acc.umu.se>
 
 	* configure.ac: Fix typo.
